--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,9 @@
     <color name="colorAccent">#263238</color>
     <color name="textColorPrimary">#000000</color>
     <color name="colorBackground">#FFFFFF</color>
-    <color name="colorDialog">#bababa</color>
+    <color name="colorDialog">#dedede</color>
     <color name="colorMenu">#e8e8e8</color>
     <color name="divider_background">#555555</color>
     <color name="divider_text">#EEEEEE</color>
-    <color name="progressBackColor">#bababa</color>
     <color name="progressTextColor">#000000</color>
 </resources>
