--- a/app/src/main/res/layout/dlgaddcomment.xml
+++ b/app/src/main/res/layout/dlgaddcomment.xml
@@ -16,6 +16,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:hint="@string/lblAddCommentWM"
+        android:padding="8dp"
         android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
         android:text="" />
 
