--- a/app/src/main/res/layout/aircraft.xml
+++ b/app/src/main/res/layout/aircraft.xml
@@ -22,29 +22,25 @@
             android:id="@+id/txtTail"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:layout_gravity="start"
             android:text=""
             android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/txtModel"
+            android:layout_gravity="start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:text="" />
 
-            <TextView
-                android:id="@+id/txtModel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/txtCommonName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
-        </LinearLayout>
-        <!-- 
-        <Gallery android:layout_width="fill_parent" android:layout_height="wrap_content" 
-        android:id="@+id/galImages" android:spacing="4dip" >
-        </Gallery>
-         -->
+        <TextView
+            android:id="@+id/txtCommonName"
+            android:layout_gravity="start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:text="" />
     </LinearLayout>
 </LinearLayout>
