--- a/app/src/main/res/layout/totals_widget.xml
+++ b/app/src/main/res/layout/totals_widget.xml
@@ -7,7 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@android:style/TextAppearance.Medium"
-        android:layout_gravity="center"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_margin="4dp"
         android:drawableStart="@drawable/icon"
         android:background="@color/colorDialog"
