Issue #145: Support for Templates  - New PropertyTemplate and TemplateGroup classes encapsulate this functionality  - New ActViewTemplates to select the templates you wish to use.  - Switched CustomPropertyTypesSvc away from AvailablePropertyTypesForUser to PropertiesAndTemplatesForUser instead; refreshing properties refreshes templates
 Other misc. fixes/enhancements
 - Aircraft has new DefaultTemplates and DefaultImage properties; Bumped version of SQL data, added columns for defaultImage and default templates
 - szSortKey wasn't being set to szTitle when not otherwise specified; it is now, so sorting should work.

--- a/app/src/main/res/menu/mfbnewflightmenu.xml
+++ b/app/src/main/res/menu/mfbnewflightmenu.xml
@@ -30,6 +30,10 @@
         android:titleCondensed="@string/menuChoosePictureShort"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/menuChooseTemplate"
+        android:title="@string/menuChooseTemplate"
+        android:titleCondensed="@string/menuChooseTemplateShort" />
+    <item
         android:id="@+id/menuResetFlight"
         android:title="@string/menuResetFlight"
         android:titleCondensed="@string/menuResetFlightShort" />
