--- a/app/src/main/res/layout/editaircraft.xml
+++ b/app/src/main/res/layout/editaircraft.xml
@@ -229,6 +229,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/lblTouchForToday" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/nextVOR"
+                        />
                 </TableRow>
 
                 <TableRow
@@ -248,6 +254,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/lblTouchForToday" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/nextTransponder"
+                        />
                 </TableRow>
 
                 <TableRow
@@ -267,6 +279,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/lblTouchForToday" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/nextPitotStatic"
+                        />
                 </TableRow>
 
                 <TableRow
@@ -286,6 +304,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/lblTouchForToday" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/nextAltimeter"
+                        />
                 </TableRow>
 
                 <TableRow
@@ -305,6 +329,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/lblTouchForToday" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/nextELT"
+                        />
                 </TableRow>
 
                 <TableRow
@@ -324,6 +354,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/lblTouchForToday" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/nextAnnual"
+                        />
                 </TableRow>
 
                 <TableRow
@@ -341,6 +377,7 @@
                         android:id="@+id/txt100hr"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:layout_span="2"
                         mfb:EditMode="DECIMAL" />
                 </TableRow>
 
@@ -359,6 +396,7 @@
                         android:id="@+id/txtOilChange"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:layout_span="2"
                         mfb:EditMode="DECIMAL" />
                 </TableRow>
 
@@ -377,6 +415,7 @@
                         android:id="@+id/txtNewEngine"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:layout_span="2"
                         mfb:EditMode="DECIMAL" />
                 </TableRow>
 
@@ -396,6 +435,7 @@
                         android:id="@+id/btnRegistration"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_span="2"
                         android:text="@string/lblTouchForToday" />
                 </TableRow>
             </TableLayout>
