--- a/app/src/main/res/layout-land/flightquery.xml
+++ b/app/src/main/res/layout-land/flightquery.xml
@@ -463,120 +463,161 @@
         <LinearLayout
             android:id="@+id/sectFQFlightFeatures"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <CheckBox
-                    android:id="@+id/ckHasFSLandings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dip"
+                android:orientation="horizontal">
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/ffFSLanding" />
-
-                <CheckBox
-                    android:id="@+id/ckHasFSNightLandings"
-                    android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/conjunctionMatches"/>
+                <RadioGroup
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/ffFSNightLanding" />
-
-                <CheckBox
-                    android:id="@+id/ckHasApproaches"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffApproaches" />
-
-                <CheckBox
-                    android:id="@+id/ckHasHolds"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffHold" />
-
-                <CheckBox
-                    android:id="@+id/ckHasTelemetry"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffTelemetry" />
-
-                <CheckBox
-                    android:id="@+id/ckHasImages"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffImages" />
-
-                <CheckBox
-                    android:id="@+id/ckHasXC"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffXC" />
-
-                <CheckBox
-                    android:id="@+id/ckHasSimIMC"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffSimIMC" />
+                    android:orientation="horizontal">
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/conjunctionAny"
+                        android:id="@+id/rbConjunctionAnyFeature" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/conjunctionAll"
+                        android:id="@+id/rbConjunctionAllFeature" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/conjunctionNone"
+                        android:id="@+id/rbConjunctionNoFeature" />
+                </RadioGroup>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <CheckBox
-                    android:id="@+id/ckHasIMC"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffIMC" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="0.5"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <CheckBox
-                    android:id="@+id/ckHasNight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffNight" />
+                    <CheckBox
+                        android:id="@+id/ckHasFSLandings"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffFSLanding" />
 
-                <CheckBox
-                    android:id="@+id/ckIsPublic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffIsPublic" />
+                    <CheckBox
+                        android:id="@+id/ckHasFSNightLandings"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffFSNightLanding" />
 
-                <CheckBox
-                    android:id="@+id/ckIsSigned"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffIsSigned" />
+                    <CheckBox
+                        android:id="@+id/ckHasApproaches"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffApproaches" />
 
-                <CheckBox
-                    android:id="@+id/ckHasDual"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffDual" />
+                    <CheckBox
+                        android:id="@+id/ckHasHolds"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffHold" />
 
-                <CheckBox
-                    android:id="@+id/ckHasCFI"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffCFI" />
+                    <CheckBox
+                        android:id="@+id/ckHasTelemetry"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffTelemetry" />
 
-                <CheckBox
-                    android:id="@+id/ckHasSIC"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffSIC" />
+                    <CheckBox
+                        android:id="@+id/ckHasImages"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffImages" />
 
-                <CheckBox
-                    android:id="@+id/ckHasPIC"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ffPIC" />
+                    <CheckBox
+                        android:id="@+id/ckHasXC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffXC" />
 
-                <CheckBox
-                    android:id="@+id/ckHasTotal"
-                    android:layout_width="wrap_content"
+                    <CheckBox
+                        android:id="@+id/ckHasSimIMC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffSimIMC" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="0.5"
                     android:layout_height="wrap_content"
-                    android:text="@string/ffTotal" />
+                    android:orientation="vertical">
+
+                    <CheckBox
+                        android:id="@+id/ckHasIMC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffIMC" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasNight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffNight" />
+
+                    <CheckBox
+                        android:id="@+id/ckIsPublic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffIsPublic" />
+
+                    <CheckBox
+                        android:id="@+id/ckIsSigned"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffIsSigned" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasDual"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffDual" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasCFI"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffCFI" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasSIC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffSIC" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasPIC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffPIC" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasTotal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffTotal" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
@@ -591,10 +632,51 @@
             android:focusable="true"
             android:text="@string/fqProperties" />
 
-        <TableLayout
-            android:id="@+id/tblFQProps"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:id="@+id/fqPropsBody"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dip"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/conjunctionMatches"/>
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/conjunctionAny"
+                        android:id="@+id/rbConjunctionAnyProps" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/conjunctionAll"
+                        android:id="@+id/rbConjunctionAllProps" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/conjunctionNone"
+                        android:id="@+id/rbConjunctionNoProps" />
+                </RadioGroup>
+            </LinearLayout>
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tblFQProps">
+            </TableLayout>
+        </LinearLayout>
 
         <!--  Named Queries -->
         <TextView
