--- a/app/src/main/res/layout-land/flightquery.xml
+++ b/app/src/main/res/layout-land/flightquery.xml
@@ -501,7 +501,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:baselineAligned="false">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -522,6 +523,12 @@
                         android:text="@string/ffFSNightLanding" />
 
                     <CheckBox
+                        android:id="@+id/ckHasAnyLandings"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffAnyLandings" />
+
+                    <CheckBox
                         android:id="@+id/ckHasApproaches"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -534,18 +541,6 @@
                         android:text="@string/ffHold" />
 
                     <CheckBox
-                        android:id="@+id/ckHasTelemetry"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/ffTelemetry" />
-
-                    <CheckBox
-                        android:id="@+id/ckHasImages"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/ffImages" />
-
-                    <CheckBox
                         android:id="@+id/ckHasXC"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -556,6 +551,25 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/ffSimIMC" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasIMC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffIMC" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasAnyInstrument"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffAnyInstrument" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasGroundSim"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffGroundSim" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -565,28 +579,10 @@
                     android:orientation="vertical">
 
                     <CheckBox
-                        android:id="@+id/ckHasIMC"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/ffIMC" />
-
-                    <CheckBox
                         android:id="@+id/ckHasNight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/ffNight" />
-
-                    <CheckBox
-                        android:id="@+id/ckIsPublic"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/ffIsPublic" />
-
-                    <CheckBox
-                        android:id="@+id/ckIsSigned"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/ffIsSigned" />
 
                     <CheckBox
                         android:id="@+id/ckHasDual"
@@ -617,6 +613,31 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/ffTotal" />
+
+                    <CheckBox
+                        android:id="@+id/ckIsPublic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffIsPublic" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasTelemetry"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffTelemetry" />
+
+                    <CheckBox
+                        android:id="@+id/ckHasImages"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffImages" />
+
+                    <CheckBox
+                        android:id="@+id/ckIsSigned"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/ffIsSigned" />
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
