--- a/app/src/main/res/layout/options.xml
+++ b/app/src/main/res/layout/options.xml
@@ -17,6 +17,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
+            android:textAlignment="center"
+            android:id="@+id/lblWhyAccount"
             android:text="@string/signInPrompt" />
 
         <TextView
@@ -24,6 +26,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
+            android:textAlignment="center"
             android:text=""
             android:textStyle="bold" />
 
@@ -61,6 +64,7 @@
             android:layout_height="wrap_content"
             android:autoLink="web"
             android:padding="5dp"
+            android:textAlignment="center"
             android:text="@string/lblForgotPassword" />
 
         <TextView
